fixed layout issues along with form

--- a/app/globals.css
+++ b/app/globals.css
@@ -13,7 +13,7 @@
   --font-sans: var(--font-geist-sans);
   --font-mono: var(--font-geist-mono);
   --color-sidebar-ring: var(--sidebar-ring);
-  --color-sidebar-border: var(--sidebar-border);
+  --color-sidebar-border: sar(--sidebar-border);
   --color-sidebar-accent-foreground: var(--sidebar-accent-foreground);
   --color-sidebar-accent: var(--sidebar-accent);
   --color-sidebar-primary-foreground: var(--sidebar-primary-foreground);
@@ -240,7 +240,6 @@ body {
 }
 
 .prose {
-  max-width: 65ch;
   font-weight: normal;
 }
 
@@ -473,6 +472,14 @@ body {
 
 .prose h3 code {
   font-size: 0.9em;
+}
+
+.prose ul {
+  font-size: 0.875em;
+}
+
+.prose ol {
+  font-size: 0.875em;
 }
 
 .prose ul > li > *:first-child {
